# ByteLocker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  generatedtest.txt
include/: argumenthandler.hpp  decryption.hpp  encryption.hpp  example.hpp  read.hpp  readfile.hpp  rijndael.hpp
src/: decryption.cpp  encryption.cpp  main.cpp  read.cpp  rijndael.cpp
tests/: test1.txt  test2.txt
